Splitted behavior in interface

--- a/.settings/gradle.prefs
+++ b/.settings/gradle.prefs
@@ -1,8 +1,8 @@
 {
   "1.0": {
     "project_path": ":",
-    "project_dir": "D:\\Eclipse\\workspace\\com.github.overlogic",
-    "connection_project_dir": "D:\\Eclipse\\workspace\\com.github.overlogic",
+    "project_dir": "D:\\eclipse\\workspace\\com.github.overlogic",
+    "connection_project_dir": "D:\\eclipse\\workspace\\com.github.overlogic",
     "connection_gradle_user_home": null,
     "connection_gradle_distribution": "GRADLE_DISTRIBUTION(WRAPPER)",
     "connection_java_home": null,
